# catch

./: README.md  pyproject.toml  pyrightconfig.json
game/: __main__.py
game/colors/: colors.py
game/rlapi/: rlapi.py  rlapicfg.py
game/sprites/: bowl.py  fruit.py  sprite.py
game/variabledisplay/: variable_display.py
