[tool.poetry]
name = "catch"
version = "0.1.0"
description = "A simple game I am writing as a practice."
authors = ["tek967 <easontekreviews2398@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
